[gd_scene load_steps=5 format=3 uid="uid://cn7qyx0qrefta"]

[ext_resource type="Texture2D" uid="uid://rfcxggfj1a3p" path="res://Assets/Textures/blankSpriteIcon.png" id="1_jr11d"]
[ext_resource type="Texture2D" uid="uid://cq480fk4pr44l" path="res://Assets/Textures/mushroom.png" id="2_8llnb"]
[ext_resource type="Script" path="res://Scripts/MushroomBackground.gd" id="2_t2ejj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjxqd"]
size = Vector2(140, 140)

[node name="WorkerSpace" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_jr11d")
script = ExtResource("2_t2ejj")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_8llnb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_kjxqd")

[connection signal="input_event" from="Area2D" to="Background" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Background" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Background" method="_on_area_2d_mouse_exited"]
